public/css/styles.css
html {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

body {
    width: 100%;
    height: 100%;
    min-width: 800px;
    background-color: #000006;
    color: #DBEDF3;
    font-family: Lucida Console,Lucida Sans Typewriter,monaco,Bitstream Vera Sans Mono,monospace;
    position: absolute;
    text-align: center;
}

#wrapper {
    width: 98%;
    height: 98%;
    margin: auto;
}

#left {
    width: 49%;
    height: 100%;
    min-width: 399px;
    display: inline-block;
    vertical-align: top;
}

#title {
    width: 100%;
    height: 5%;
    user-select: none;
    font-size: 175%;
}

#cesiumContainer {
    width: 100%;
    height: 55%;
    vertical-align: top;
}

#streetView {
    width: 100%;
    height: 40%;
    vertical-align: top;
}

.panoramaMissing {
    width: 60%;
    height: 60%;
    margin: auto;
    color: #bf6a5b;
    font-size: 130%;
}

.missingSpacerBottom {
    width: 100%;
    height: 5%;
}

.missingSpacerTop {
    width: 100%;
    height: 35%;
}

#tempLabel {
    display: inline-block;
}

.launchListSpacer {
    width: 100%;
    height: 1%;
    display: inline-block;
}

#right {
    width: 49%;
    height: 100%;
    min-width: 399px;
    display: inline-block;
    overflow: hidden;
}

#selectedLaunch {
    min-width: 399px;
    min-height: 300px;
    height: 30%;
    text-align: center;
    border: 2px solid #DBEDF3;
    background-color: #00010f;
}

#selectedPlaceholder {
    display: inline-block;
    line-height: 15em;
    font-size: 125%;
}

.selectedTitle {
    width: 99%;
    height: 15%;
    font-size: 150%;
    text-align: left;
    float: right;
    color: #faf373;
}

.underline {
    width: max-content;
    border-bottom: 1px solid;
}

#selectedTable {
    width: 100%;
    height: 55%;
}

#selectedTable > tr {
    width: 100%;
}

.fullSize {
    width: 100%;
    height: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#selectedTable > tr  > .tdLeft {
    text-align: right;
    width: 30%;
}

#selectedTable > tr  > .tdSpacer {
    width: 10%;
}

#selectedTable > tr  > .tdRight {
    text-align: left;
    width: 60%;
}

#launchListContainer {
    width: 100%;
    height: 70%;
    min-width: 399px;
    display: inline-block;
    overflow-y: hidden;
    overflow-x: hidden;
}

#launchListTitle {
    width: 100%;
    height: 4%;
    min-width: 399px;
    font-size: 150%;
    user-select: none;
}

#launchList {
    width: 100%;
    height: 94%;
    min-width: 399px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.launchNode {
    width: 99%;
    height: 20%;
    font-size: 100%;
    border-radius: 15px;
    border: 2px solid #DBEDF3;
    margin-bottom: 0.5em;
    cursor: pointer;
    background-color: #00010f;
}

.launchNodeDate {
    width: 99%;
    float: right;
    height: 50%;
    text-align: left;
    font-size: 75%;
}

.launchNodeName {
    width: 100%;
    height: 50%;
    text-align: center;
}

.listTrailing {
    width: 100%;
    height: 30%;
}

.linkContainer {
    width: 100%;
    height: 30%;
    text-align: center;
    user-select: none;
    font-size: 120%;
}

.streamSpacer {
    width: 100%;
    height: 25%;
}

.streamLink {
    width: 50%;
    height: 50%;
    color: white;
    border-radius: 15px;
    display: inline-block;

    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.available:hover {
    color: #330033;
}

.available {
    background-color: #5bbf76;
    cursor: pointer;
}

.unavailable {
    background-color: #bf6a5b;
    cursor: not-allowed;
}

